--- a/css/reset.css
+++ b/css/reset.css
@@ -1,4 +1,10 @@
 /* CSS reset */
+*,
+*::before,
+*::after {
+    box-sizing: border-box;
+}
+
 body,div,dl,dt,dd,ul,ol,li,h1,h2,h3,h4,h5,h6,pre,form,fieldset,input,textarea,p,blockquote,th,td { 
 	margin:0;
 	padding:0;
@@ -7,6 +13,12 @@ html,body {
 	margin:0;
 	padding:0;
 }
+
+a {
+    text-decoration: none;
+    color: inherit;
+}
+
 table {
 	border-collapse:collapse;
 	border-spacing:0;
