--- a/css/index.css
+++ b/css/index.css
@@ -1,13 +1,23 @@
-@import url("reset.css");
-@import url("base.css");
-@import url("rwd.css");
+@import url("mobilerwd.css");
 
-/*===RESET === ===CUSTOMIZE=== ===NOMALIZE */
 body {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 
+
+img, iframe, object, embed, video {
+    width: 100%;
+    max-width: 100%;
+}
+
+button {
+    max-width: 48px;
+}
+
+nav, footer {
+    background: inherit;
+}
 
 img {
     max-width: 100%;
@@ -15,23 +25,39 @@ img {
     box-sizing: border-box;
 }
 
-
-#logintube {
-    text-align: center;
-    box-sizing: border-box;
-    max-width: 40%;
-    margin: auto;
-    display: block;
-    color: white; 
-    padding: 3px;
-    border-right: 3px ridge white;
-    border-bottom: 1px ridge white;
+.social-contact img {
+    max-width: 40px;
     border-radius: 15px;
-    box-shadow: 5px 5px red;
-    text-transform: capitalize;
     background: black;
-    opacity: 10;
+    display: inline;
+    border: 2px solid salmon;
 }
 
 
+.main-section-division-heading, h2, h3 , h1, .sutitle {
+    background: #000;
+    color: peru;
+    border: 2px solid orangered;
+    border-radius: 0 0 7px 7px;
+    text-transform: uppercase;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    padding: 5px;
+    font-size: 16px;
+}
+.main-section-division p {
+    padding: 10px;
+    margin: 10px auto;
+}
 
+footer {
+    text-transform: uppercase;
+    padding: 20px;
+    background: black;
+    box-shadow: inset 5px 5px 5px red, inset -5px -5px 15px red;
+}
+.footer-link a {
+    text-align: center;
+    color: coral;
+    padding: 10px;
+    display: block;
+}
