--- a/css/index.css
+++ b/css/index.css
@@ -2,7 +2,9 @@
 
 body {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    
 }
+
 
 
 
@@ -29,6 +31,7 @@ nav, footer {
     background: black;
     display: inline;
     border: 2px solid salmon;
+    text-align: center;
 }
 
 .main-section-division-heading, h2, h3 , h1, .sutitle {
