alradyputthe aside menu, for desktop and tablets

--- a/css/login.css
+++ b/css/login.css
@@ -1,5 +1,5 @@
 body {
-    background: url(../img/mainbg.png) no-repeat;
+    background: white;
     background-attachment: fixed;
     background-size: cover;
 }
